# multilevel

./: .gitignore  README.md  build.bat  run_test
projects/: CMakeLists.txt
projects/bubble/: CMakeLists.txt  main.cpp
projects/bubble/sorting/: CMakeLists.txt  io.cpp  io.hpp  sortings.cpp
projects/didactiyka/: CMakeLists.txt  menu.hpp  menu_functions.hpp  menu_items.hpp
projects/long_num/: CMakeLists.txt
projects/long_num/src/: CMakeLists.txt  long_num.cpp  long_num.hpp
projects/long_num/test/: CMakeLists.txt  busko_test_long_number.cpp  test_long_num.cpp
projects/merge/: CMakeLists.txt  main.cpp
projects/merge/sorting/: CMakeLists.txt  io.cpp  io.hpp  sortings.cpp
projects/sort/: CMakeLists.txt  main.cpp
projects/sort/src/: CMakeLists.txt  io.cpp  sortings.cpp
projects/unit_test/: CMakeLists.txt
projects/unit_test/test/: CMakeLists.txt  test_bubble.cpp
projects/unit_test_buble/: CMakeLists.txt
projects/unit_test_buble/src/: CMakeLists.txt  sortings.cpp  sortings.hpp
projects/unit_test_buble/test/: CMakeLists.txt  test_bubble.cpp
projects/unit_test_merge/: CMakeLists.txt
projects/unit_test_merge/src/: CMakeLists.txt  sortings.hpp
projects/unit_test_merge/test/: CMakeLists.txt  test_merge.cpp
src/: CMakeLists.txt
src/menu/: CMakeLists.txt  main.cpp  menu_functions.cpp  menu_items.cpp
